--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
     <div id="history" class="tab-content" style="display: none;"></div>
   </div>
 
+  <div class="container" id="adminPanel" style="display:none;">
+    <h2>Добавить заказ</h2>
+    <form id="adminForm">
+      <label>Ник:<input type="text" id="name" required /></label>
+      <label>Статус:<input type="text" id="status" required /></label>
+      <label>Тип заказа:
+        <select id="type">
+          <option value="narzki">Нарезки</option>
+          <option value="emotes">Эмоуты</option>
+          <option value="startscreen">Стартовый экран</option>
+          <option value="history">История (указать тип вручную)</option>
+        </select>
+      </label>
+      <label id="typeField" style="display:none;">Тип (для истории):<input type="text" id="historyType" /></label>
+      <button type="submit">Добавить</button>
+    </form>
+  </div>
+
+  <!-- Модальное окно ввода пароля -->
+  <div id="passwordModal" style="display:none; position: fixed; top:0; left:0; width:100%; height:100%; background:#000000cc; display:flex; align-items:center; justify-content:center; z-index:10;">
+    <div style="background:#1e1e1e; padding:20px; border-radius:10px;">
+      <p>Введите пароль для доступа к админке:</p>
+      <input type="password" id="adminPassword" style="padding:8px; width:100%; margin-bottom:10px;">
+      <button onclick="checkPassword()">Войти</button>
+      <p id="wrongPass" style="color:red; display:none;">Неверный пароль</p>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
