--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <!-- Модальное окно ввода пароля -->
-  <div id="passwordModal" style="display:none; position: fixed; top:0; left:0; width:100%; height:100%; background:#000000cc; display:flex; align-items:center; justify-content:center; z-index:10;">
+  <div id="passwordModal" style="display:none; position: fixed; top:0; left:0; width:100%; height:100%; background:#000000cc; align-items:center; justify-content:center; z-index:10;">
     <div style="background:#1e1e1e; padding:20px; border-radius:10px;">
       <p>Введите пароль для доступа к админке:</p>
       <input type="password" id="adminPassword" style="padding:8px; width:100%; margin-bottom:10px;">
